--- a/darwin-core-guide.tex
+++ b/darwin-core-guide.tex
@@ -36,7 +36,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
-  pdftitle={Darwin Core Guide},
+  pdftitle={Darwin Core Marine Example Compendium},
   pdfauthor={By: Standardizing Marine Biological Data Working Group},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
@@ -136,9 +136,9 @@
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
 
-\title{Darwin Core Guide}
+\title{Darwin Core Marine Example Compendium}
 \author{By: \href{https://github.com/ioos/bio_data_guide/graphs/contributors}{Standardizing Marine Biological Data Working Group}}
-\date{Updated: 2022-06-17}
+\date{Updated: 2023-04-17}
 
 \begin{document}
 \maketitle
@@ -1254,7 +1254,7 @@ compliant datasets
 ## $ order             <chr> "Alismatales", "Alismatales", "Alismatales", "Alisma~
 ## $ family            <chr> "Zosteraceae", "Zosteraceae", "Zosteraceae", "Zoster~
 ## $ genus             <chr> "Zostera", "Zostera", "Zostera", "Zostera", "Zostera~
-## $ citation          <chr> "WoRMS (2022). Zostera subg. Zostera marina Linnaeus~
+## $ citation          <chr> "WoRMS (2023). Zostera subg. Zostera marina Linnaeus~
 ## $ lsid              <chr> "urn:lsid:marinespecies.org:taxname:145795", "urn:ls~
 ## $ isMarine          <int> 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1~
 ## $ match_type        <chr> "exact", "exact", "exact", "exact", "exact", "exact"~
@@ -1383,27 +1383,24 @@ Print session information below in case necessary for future reference
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] worrms_0.4.2    magrittr_2.0.3  knitr_1.39      lubridate_1.8.0
-##  [5] here_1.0.1      forcats_0.5.1   stringr_1.4.0   dplyr_1.0.9    
-##  [9] purrr_0.3.4     readr_2.1.2     tidyr_1.2.0     tibble_3.1.7   
-## [13] ggplot2_3.3.6   tidyverse_1.3.1
+##  [1] worrms_0.4.2    magrittr_2.0.3  knitr_1.42      here_1.0.1     
+##  [5] lubridate_1.9.2 forcats_1.0.0   stringr_1.5.0   dplyr_1.1.1    
+##  [9] purrr_1.0.1     readr_2.1.4     tidyr_1.3.0     tibble_3.2.1   
+## [13] ggplot2_3.4.2   tidyverse_2.0.0
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] Rcpp_1.0.8.3     assertthat_0.2.1 rprojroot_2.0.3  digest_0.6.29   
-##  [5] utf8_1.2.2       R6_2.5.1         cellranger_1.1.0 backports_1.4.1 
-##  [9] reprex_2.0.1     evaluate_0.15    httr_1.4.3       pillar_1.7.0    
-## [13] rlang_1.0.2      curl_4.3.2       readxl_1.4.0     rstudioapi_0.13 
-## [17] rmarkdown_2.14   urltools_1.7.3   triebeard_0.3.0  bit_4.0.4       
-## [21] munsell_0.5.0    broom_0.8.0      compiler_4.1.1   modelr_0.1.8    
-## [25] xfun_0.31        pkgconfig_2.0.3  htmltools_0.5.2  tidyselect_1.1.2
-## [29] httpcode_0.3.0   bookdown_0.27    fansi_1.0.3      crayon_1.5.1    
-## [33] tzdb_0.3.0       dbplyr_2.2.0     withr_2.5.0      crul_1.2.0      
-## [37] grid_4.1.1       jsonlite_1.8.0   gtable_0.3.0     lifecycle_1.0.1 
-## [41] DBI_1.1.2        scales_1.2.0     cli_3.3.0        stringi_1.7.6   
-## [45] vroom_1.5.7      fs_1.5.2         xml2_1.3.3       ellipsis_0.3.2  
-## [49] generics_0.1.2   vctrs_0.4.1      tools_4.1.1      bit64_4.0.5     
-## [53] glue_1.6.2       hms_1.1.1        parallel_4.1.1   fastmap_1.1.0   
-## [57] yaml_2.3.5       colorspace_2.0-3 rvest_1.0.2      haven_2.5.0
+##  [1] tidyselect_1.2.0 xfun_0.38        colorspace_2.1-0 vctrs_0.6.1     
+##  [5] generics_0.1.3   htmltools_0.5.5  yaml_2.3.7       utf8_1.2.3      
+##  [9] rlang_1.1.0      pillar_1.9.0     glue_1.6.2       httpcode_0.3.0  
+## [13] withr_2.5.0      bit64_4.0.5      readxl_1.4.2     lifecycle_1.0.3 
+## [17] munsell_0.5.0    gtable_0.3.3     cellranger_1.1.0 evaluate_0.20   
+## [21] tzdb_0.3.0       fastmap_1.1.1    parallel_4.1.1   curl_5.0.0      
+## [25] fansi_1.0.4      triebeard_0.4.1  urltools_1.7.3   Rcpp_1.0.10     
+## [29] scales_1.2.1     jsonlite_1.8.4   vroom_1.6.1      bit_4.0.5       
+## [33] hms_1.1.3        digest_0.6.31    stringi_1.7.12   bookdown_0.33   
+## [37] grid_4.1.1       rprojroot_2.0.3  cli_3.6.1        tools_4.1.1     
+## [41] crul_1.3         crayon_1.5.2     pkgconfig_2.0.3  timechange_0.2.0
+## [45] rmarkdown_2.21   rstudioapi_0.14  R6_2.5.1         compiler_4.1.1
 \end{verbatim}
 
 \hypertarget{trawl-data}{%
@@ -1981,7 +1978,7 @@ If you are interested in creating an EML metadata file, it is possible to upload
 \hypertarget{refs}{}
 \begin{CSLReferences}{1}{0}
 \leavevmode\vadjust pre{\hypertarget{ref-R-rmarkdown}{}}%
-Allaire, JJ, Yihui Xie, Jonathan McPherson, Javier Luraschi, Kevin Ushey, Aron Atkins, Hadley Wickham, Joe Cheng, Winston Chang, and Richard Iannone. 2022. \emph{Rmarkdown: Dynamic Documents for r}. \url{https://CRAN.R-project.org/package=rmarkdown}.
+Allaire, JJ, Yihui Xie, Christophe Dervieux, Jonathan McPherson, Javier Luraschi, Kevin Ushey, Aron Atkins, et al. 2023. \emph{Rmarkdown: Dynamic Documents for r}. \url{https://CRAN.R-project.org/package=rmarkdown}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-Barbier2017}{}}%
 Barbier, Edward B. 2017. {``Marine Ecosystem Services.''} \emph{Current Biology}. Cell Press. \url{https://doi.org/10.1016/j.cub.2017.03.020}.
@@ -2107,7 +2104,7 @@ Wieczorek, John, David Bloom, Robert Guralnick, Stan Blum, Markus Döring, Renat
 Wilkinson, Mark D., Michel Dumontier, IJsbrand Jan Aalbersberg, Gabrielle Appleton, Myles Axton, Arie Baak, Niklas Blomberg, et al. 2016. {``The FAIR Guiding Principles for Scientific Data Management and Stewardship.''} \emph{Scientific Data} 3 (March): 1--9. \url{https://doi.org/10.1038/sdata.2016.18}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-knitr2014}{}}%
-Xie, Yihui. 2014. {``Knitr: A Comprehensive Tool for Reproducible Research in {R}.''} In \emph{Implementing Reproducible Computational Research}, edited by Victoria Stodden, Friedrich Leisch, and Roger D. Peng. Chapman; Hall/CRC. \url{http://www.crcpress.com/product/isbn/9781466561595}.
+Xie, Yihui. 2014. {``Knitr: A Comprehensive Tool for Reproducible Research in {R}.''} In \emph{Implementing Reproducible Computational Research}, edited by Victoria Stodden, Friedrich Leisch, and Roger D. Peng. Chapman; Hall/CRC.
 
 \leavevmode\vadjust pre{\hypertarget{ref-xie2015}{}}%
 ---------. 2015b. \emph{Dynamic Documents with {R} and Knitr}. 2nd ed. Boca Raton, Florida: Chapman; Hall/CRC. \url{http://yihui.name/knitr/}.
@@ -2119,10 +2116,10 @@ Xie, Yihui. 2014. {``Knitr: A Comprehensive Tool for Reproducible Research in {R
 ---------. 2016. \emph{Bookdown: Authoring Books and Technical Documents with {R} Markdown}. Boca Raton, Florida: Chapman; Hall/CRC. \url{https://bookdown.org/yihui/bookdown}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-R-bookdown}{}}%
----------. 2022a. \emph{Bookdown: Authoring Books and Technical Documents with r Markdown}. \url{https://CRAN.R-project.org/package=bookdown}.
+---------. 2023a. \emph{Bookdown: Authoring Books and Technical Documents with r Markdown}. \url{https://CRAN.R-project.org/package=bookdown}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-R-knitr}{}}%
----------. 2022b. \emph{Knitr: A General-Purpose Package for Dynamic Report Generation in r}. \url{https://yihui.org/knitr/}.
+---------. 2023b. \emph{Knitr: A General-Purpose Package for Dynamic Report Generation in r}. \url{https://yihui.org/knitr/}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-rmarkdown2018}{}}%
 Xie, Yihui, J. J. Allaire, and Garrett Grolemund. 2018. \emph{R Markdown: The Definitive Guide}. Boca Raton, Florida: Chapman; Hall/CRC. \url{https://bookdown.org/yihui/rmarkdown}.
